--- a/charts/arcgis-web-appbuilder/templates/deployment.yaml
+++ b/charts/arcgis-web-appbuilder/templates/deployment.yaml
@@ -24,6 +24,11 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command: ["node"]
+          args: ["/srv/sites/webAppBuilder/server/server.js"]
+          envFrom:
+          - configMapRef:
+              name: {{ include "arcgis-web-appbuilder.fullname" . }}
           ports:
             - name: http
               containerPort: 80
